Changed min-height of tsparticles to 100% to avoid shifting on mobile devices

--- a/src/main.css
+++ b/src/main.css
@@ -132,7 +132,7 @@ table {
 #tsparticles {
   position: absolute;
   width: 100%;
-  height: 100%;
+  min-height: 100%;
   z-index: -1;
 }
 
